Mostly working, but with a few problems

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -474,3 +474,12 @@
  ATL_police_k_963:0 "Regain Territory in Taidorie"
  ATL_police_k_964:0 "Regain Territory in Chuzaseit"
  ATL_police_k_965:0 "Regain Territory in Tashrets"
+ ATL_police_i_944:0 "Regain Territory in Burmiunean"
+ ATL_police_i_945:0 "Regain Territory in Zuhaitz"
+ ATL_police_i_946:0 "Regain Territory in Doxa"
+ ATL_police_i_947:0 "Regain Territory in Osoa"
+ ATL_police_i_948:0 "Regain Territory in Yamylaik"
+ ATL_police_i_949:0 "Regain Territory in Anoixte"
+ ATL_police_i_963:0 "Regain Territory in Taidorie"
+ ATL_police_i_964:0 "Regain Territory in Chuzaseit"
+ ATL_police_i_965:0 "Regain Territory in Tashrets"
