--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -3,7 +3,7 @@
  LOADING_TIP_88:0 "\"You drive tanks down the streets, and then expect us to believe you when you call for peace?\"\n - Fijnland's Prime Minister, Willem van den Bergh"
  LOADING_TIP_89:0 "\"Vorwärts! Vorwärts und steche ihnen in die Augen!\"\n - Heinrich Schmidt, F.S.M. Freikorps."
  LOADING_TIP_90:0 "\"You can live your life as a coward, or you die as a hero!\"\n - General Dajjar Zohoq addressing his troops a moment before an enemy bullet killed him."
- LOADING_TIP_91:0 "\"One dishonor heaped upon another. The heavenly mandate has departed and left us desolate.\"\n - Yang Xinyi Luo addressing the Trinsuyin Parliament before committing suicide." #This no longer make sense given the new lore
+ LOADING_TIP_91:0 "\"One dishonor heaped upon another. The heavenly mandate has departed and left us desolate.\"\n - Yang Xinyi Luo addressing the Trinsuyin Parliament before committing suicide." #This no longer make sense given the new lore.
  LOADING_TIP_92:0 "\"Praise the Lord and pass the ammunition!\"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_93:0 "\"If fighting is sure to result in victory, then you must fight!\"\n - Sun Tzu"
  LOADING_TIP_94:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredicatablity.\"\n - General Miles Dempsey"
@@ -37,11 +37,12 @@
  LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
  LOADING_TIP_123:0 "\"When death stares at me I shouldn't close my eyes and pray for it; I should smirk at the very concept of it. I owe those countless soldiers an answer cause of my gambles. They have faced my many gambles and when wrong I am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria " #Thursa can you trim this to fit in the box?
  LOADING_TIP_124:0 "\"I no longer  believe there is a god - for if he does exist He must be truly mad! Look at the state of things!\"\n -unnamed Yohannian High Commissioner"
- LOADING_TIP_125:0 "\"Its only a war crime if you lose"\"\n -to be decided"
+ LOADING_TIP_125:0 "\"Its only a war crime if you lose"\"\n -General *name* Teravamsincha of Brazil in the Congo"
  LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -Trynusyin puppet emperor"
  LOADING_TIP_127:0 "\"The law is not a religious doctrine! The laws were made to help us govern ourselves... but it's been left to rule on its own. Somewhere along the line, it's been twisted into scripture!\"\n -unnamed Yohannian government official"
- LOADING_TIP_128:0 "\"The distinction between a Merchant and a General is seen only by politicians who have no experience of either.\"\n -Japans puppet emperor of Trynsuyin or Atlatnis"
+ LOADING_TIP_128:0 "\"The distinction between a Merchant and a General is seen only by politicians who have no experience of either.\"\n -Atlatnis"
  LOADING_TIP_129:0 "\"Morally subversive, economically destructive, socially degrading, confused in its causes, devious in its results, it is the outstanding example in European history of meaningless conflict" \"\n -Dame Cicely Veronica Wedgwood"
  LOADING_TIP_130:0 "\"What happens when Light shines so painfully bright, that it becomes more terrible than Darkness?"\"\n - Upon learning about the nuclear detonations on japan"
  LOADING_TIP_131:0 "\"We came for the soft belly of Europe, and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Atlantis in Italy"
+ LOADING_TIP_132:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -  King Roderigo of Yohannia"
  
