Gangstas now fight each other

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -465,21 +465,30 @@
  ATL_itork_965_attack:0 "Defend Tashrets from the Itorkanak"
  
  
- ATL_police_k_944:0 "Regain Territory in Burmiunean"
- ATL_police_k_945:0 "Regain Territory in Zuhaitz"
- ATL_police_k_946:0 "Regain Territory in Doxa"
- ATL_police_k_947:0 "Regain Territory in Osoa"
- ATL_police_k_948:0 "Regain Territory in Yamylaik"
- ATL_police_k_949:0 "Regain Territory in Anoixte"
- ATL_police_k_963:0 "Regain Territory in Taidorie"
- ATL_police_k_964:0 "Regain Territory in Chuzaseit"
- ATL_police_k_965:0 "Regain Territory in Tashrets"
- ATL_police_i_944:0 "Regain Territory in Burmiunean"
- ATL_police_i_945:0 "Regain Territory in Zuhaitz"
- ATL_police_i_946:0 "Regain Territory in Doxa"
- ATL_police_i_947:0 "Regain Territory in Osoa"
- ATL_police_i_948:0 "Regain Territory in Yamylaik"
- ATL_police_i_949:0 "Regain Territory in Anoixte"
- ATL_police_i_963:0 "Regain Territory in Taidorie"
- ATL_police_i_964:0 "Regain Territory in Chuzaseit"
- ATL_police_i_965:0 "Regain Territory in Tashrets"
+ ATL_police_k_944:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_945:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_946:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_947:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_948:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_949:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_963:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_964:0 "Regain Territory from the Kaprastiak"
+ ATL_police_k_965:0 "Regain Territory from the Kaprastiak"
+ ATL_police_i_944:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_945:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_946:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_947:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_948:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_949:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_963:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_964:0 "Regain Territory from the Itorkanak"
+ ATL_police_i_965:0 "Regain Territory from the Itorkanak"
+ 
+ ATL_spy_defense:0 ""
+ ATL_spy_partisan:0 ""
+ ATL_spy_interrogation:0 ""
+ ATL_fortify:0 "Strengthen the Police Apparatus"
+ ATL_factory_curfews_toggle:0 "Toggle Curfews on Factories"
+ ATL_dockyard_curfews_toggle:0 "Toggle Curfews on Dockyards"
+ ATL_training:0 "Improve the Police Training"
+ ATL_equip:0 "Distribute Better Equipment"
