Communism is fun

--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -198,6 +198,8 @@
  ATL_attack_itorkanak_tooltip:0 "§gStarts the event chain to destroy the Itorkanak \n§"
  ATL_attack_kaprastiak_tooltip:0 "§gStarts the event chain to destroy the Kaprastiak \n§"
  ATL_attack_all_tooltip:0 "§gWe are going to fight both criminal organizations \n§"
+ ATL_kapra_buddies:0 "§gEnds the Kaprastiak Hostilities \n§"
+ ATL_itork_buddies:0 "§gEnds the Itorkanak Hostilities \n§"
  ATL_naitastarak_tooltip:0 "§gAllows decisions to suppress dissident thought \n§"
  ATL_panatlantean_railroad:0 "§gAdd maximum infrastructure in all mainland states \n§"
  ATL_air_reforms:0 "§gAllows decisions to remove the §yOutdated Air Force§  modifier \n§"
