Hyper Borea aftershocks
Hyperborea did exist. Its just frozen over but the people still live there in the Hyperborean SSR with their leader Velko Pelikan

--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -249,3 +249,9 @@
  VICTORY_POINTS_14903: "Sanggofesaran"
  VICTORY_POINTS_13583: "Pennston"
  VICTORY_POINTS_12736: "Los Demonios"
+ VICTORY_POINTS_8461: "HB arctic sea port"
+ VICTORY_POINTS_7738: "HB marsh farms"
+ VICTORY_POINTS_1684: "HB river port"
+ VICTORY_POINTS_4710: "Frozen Farms"
+ VICTORY_POINTS_1744: "Mining to sell and not die"
+ VICTORY_POINTS_1659: "Capital of the BoreanSSR"
