--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -779,3 +779,16 @@
  MUU_democratic_ADJ:0 "Muror"
  MUU_neutrality_ADJ:0 "Muror"
  MUU_communism_ADJ:0 "Muror"
+
+ HBO_fascism:0 "Hyperborean Empire"
+ HBO_fascism_DEF:0 "the Hyperborean Empire"
+ HBO_democratic:0 "Hyperborea"
+ HBO_democratic_DEF:0 "Hyperborean Republic"
+ HBO_neutrality:0 "Hyperborea"
+ HBO_neutrality_DEF:0 "Hyperborean Republic"
+ HBO_communism:0 "Hyperborean Socialist Republic"
+ HBO_communism_DEF:0 "the Hyperborean Socialist Republic"
+ HBO_fascism_ADJ:0 "Hyperborean"
+ HBO_democratic_ADJ:0 "Hyperborean"
+ HBO_neutrality_ADJ:0 "Hyperborean"
+ HBO_communism_ADJ:0 "Hyperborean"
