Yohannia Plus Update

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -1,20 +1,6 @@
 ﻿l_english:
- STATE_1068:0 "Melilani"
- STATE_1067:0 "South Sudan"
  STATE_271:0 "Tigray-Shewa"
- STATE_1064:0 "Yohannia"
- STATE_1065:0 "Kaffa-Sidamo"
- STATE_1066:0 "Hararghe-Bale"
- STATE_1053:0 "Puhngloi"
- STATE_1054:0 "Kurukattai"
- STATE_1055:0 "Dulgwa Mabong"
- STATE_1057:0 "Ratulismara"
- STATE_1056:0 "Gatisrahaval"
- STATE_1058:0 "Kilakkatai"
- STATE_1059:0 "Tsetsa"
- STATE_1060:0 "Boranepatera"
- STATE_1061:0 "Portuguese Utura"
- STATE_1062:0 "Chaansau"
+ STATE_357:0 "Rhode Island"
  STATE_807:0 "Utukalla"
  STATE_808:0 "Rengtsiu"
  STATE_809:0 "Sabavtresha"
@@ -261,5 +247,28 @@
  STATE_1050:0 "Poitoushyre"
  STATE_1051:0 "Manishyre"
  STATE_1052:0 "Belshyre"
- STATE_357:0 "Rhode Island"
+ STATE_1053:0 "Puhngloi"
+ STATE_1054:0 "Kurukattai"
+ STATE_1055:0 "Dulgwa Mabong"
+ STATE_1056:0 "Gatisrahaval"
+ STATE_1057:0 "Ratulismara"
+ STATE_1058:0 "Kilakkatai"
+ STATE_1059:0 "Tsetsa"
+ STATE_1060:0 "Boranepatera"
+ STATE_1061:0 "Portuguese Utura"
+ STATE_1062:0 "Chaansau"
  STATE_1063:0 "Central Ackerson"
+ STATE_1064:0 "Oeyamon"
+ STATE_1065:0 "Kaffa-Sidamo"
+ STATE_1066:0 "Hararghe-Bale"
+ STATE_1067:0 "South Sudan"
+ STATE_1068:0 "Melilani"
+ STATE_1069:0 "Eastern Congo"
+ STATE_1070:0 "Great Rift Valley"
+ STATE_1071:0 "South Lake"
+ STATE_1072:0 "West Virginia"
+ STATE_1073:0 "Yabishee"
+ STATE_1074:0 "Reyshaba"
+ STATE_1075:0 "Bahmelq"
+ STATE_1076:0 "Delaware"
+ 
