--- a/localisation/replace/vanilla_state_names_l_english.yml
+++ b/localisation/replace/vanilla_state_names_l_english.yml
@@ -1,5 +1,9 @@
 ﻿l_english:
+ STATE_270:0 "Prometida"
+ STATE_357:0 "Rhode Island"
  STATE_379:0 "Paiute"
  STATE_388:0 "Shoshone"
+ STATE_473:0 "Kootenai"
  STATE_579:0 "Upper Hyperborea"
  STATE_580:0 "Lower Hyperborea"
+ STATE_727:0 "Islárida"
