--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -255,3 +255,4 @@
  VICTORY_POINTS_4710: "Frozen Farms"
  VICTORY_POINTS_1744: "Mining to sell and not die"
  VICTORY_POINTS_10620: "Capital of the BoreanSSR"
+ VICTORY_POINTS_9786: "Wilmington"
