Map Updates, not done

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -271,4 +271,5 @@
  STATE_1074:0 "Reyshaba"
  STATE_1075:0 "Bahmelq"
  STATE_1076:0 "Delaware"
- 
+ STATE_1077:0 "Eureka"
+ STATE_1078:0 "North Queensland" 
