--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -256,3 +256,8 @@
  VICTORY_POINTS_1744: "Mining to sell and not die"
  VICTORY_POINTS_10620: "Capital of the BoreanSSR"
  VICTORY_POINTS_9786: "Wilmington"
+ VICTORY_POINTS_10859: "Wakanda"
+ VICTORY_POINTS_12929: "Fragneilo"
+ VICTORY_POINTS_15002: "Tol Ahrem"
+ VICTORY_POINTS_15001: "Qarghi"
+ VICTORY_POINTS_15004: "Qapeta"
