Australian States Fixed!

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -1,6 +1,8 @@
 ﻿l_english:
  STATE_271:0 "Tigray-Shewa"
  STATE_357:0 "Rhode Island"
+ STATE_521:0 "South Queensland"
+ STATE_674:0 "Auralia"
  STATE_807:0 "Utukalla"
  STATE_808:0 "Rengtsiu"
  STATE_809:0 "Sabavtresha"
