--- a/localisation/replace/AML_strategic_region_names_l_english.yml
+++ b/localisation/replace/AML_strategic_region_names_l_english.yml
@@ -193,7 +193,7 @@
  STRATEGICREGION_192:0 "Northern Sweden"
  STRATEGICREGION_193:1 "Northern Australia"
  STRATEGICREGION_194:0 "Eastern Australia"
- STRATEGICREGION_195:0 "Central Australia"
+ STRATEGICREGION_195:0 "Simpson Sea"
  STRATEGICREGION_196:1 "Arabia"
  STRATEGICREGION_197:0 "New England"
  STRATEGICREGION_198:0 "Midwest"
