Fully Functioning Andamooka

--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -261,3 +261,5 @@
  VICTORY_POINTS_15002: "Tol Ahrem"
  VICTORY_POINTS_15001: "Qarghi"
  VICTORY_POINTS_15004: "Qapeta"
+ VICTORY_POINTS_8186: "Port Augusta"
+ VICTORY_POINTS_10927: "Andamooka"
