please give localizations

--- a/localisation/AML_decisions_l_english.yml
+++ b/localisation/AML_decisions_l_english.yml
@@ -72,3 +72,10 @@
  form_country_frisland_required_states_tt:0 "Controls Frisland."
  form_country_greenland_required_states_tt:0 "Controls Iceland."
  form_naf_category_desc:0 "Gaydr and his compatriots put forth a theory of a union between the nations of the northern Atlantic. A deal to be struck, to unite the region, but was blocked by foreign imperialists in 1898. Yet, now our time has come again; we shall form a strong bond in an act of solidarity between our brothers! Long live the federation!"
+ Andamooka_canal:0 "The Andamooka Canal"
+ Andamooka_canal_desc:0 "Description Please"
+ blow_andamooka_canal:0 "Blow up Andamooka Canal"
+ blow_andamooka_canal_desc:0 "words"
+ rebuild_andamooka_canal:0 "Rebuild Andamooka Canal"
+ rebuild_andamooka_canal_desc:0 "nerd words"
+ 
