Changes Austral to Pacific in many locs

--- a/localisation/replace/vanilla_state_names_l_english.yml
+++ b/localisation/replace/vanilla_state_names_l_english.yml
@@ -4,6 +4,7 @@
  STATE_379:0 "Paiute"
  STATE_388:0 "Shoshone"
  STATE_473:0 "Kootenai"
+ STATE_521:0 "South Queensland"
  STATE_579:0 "Upper Hyperborea"
  STATE_580:0 "Lower Hyperborea"
  STATE_727:0 "Islárida"
