Many, many updates

--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -263,3 +263,4 @@
  VICTORY_POINTS_15004: "Qapeta"
  VICTORY_POINTS_8186: "Port Augusta"
  VICTORY_POINTS_10927: "Andamooka"
+ VICTORY_POINTS_1077: "Broken Hill"
