--- a/localisation/replace/focus_l_english.yml
+++ b/localisation/replace/focus_l_english.yml
@@ -3,7 +3,7 @@
  AST_introduce_unconventional_warfare_desc:0 "The jungles of the Australo-Pacific will require a new kind of warfare. We must learn to move quickly and quietly through the dense cover - ambush our enemies and expect the same from them."
  AST_pacific_area_navy:0 "Austral Ocean Navy"
  AST_pacific_area_navy_desc:0 "Though His Majesty fights for survival in Europe, our immediate priority should be a navy that can fight our enemies here in the Austral. We must develop strategies that are in line with that objective."
- AST_austral_initiative: 0 "The Austral Initiative"
+ AST_austral_initiative:0 "The Austral Initiative"
  AST_austral_initiative_desc:0 "We have established the power base and credibility to create our own network of alliances, centered on defending the Western Austral Area from hostile powers. We will seek out like-minded powers and make Australia a major voice in global affairs."
  AST_woo_usa_desc:0 "Our true ally is America, another major power with British roots. This rich and powerful land is better able to understand our needs, increase our prosperity and protect us from aggression."
  AST_preemptive_intervention_desc:0 "Japan's empire building over the last decade poses a threat to every free people in the Pacific AND Austral regions. We cannot afford to wait until it turns its hungry eyes in our direction. The time for action is now."
@@ -15,5 +15,7 @@
  USA_pacific_pacification:1 "Austral Pacification"
  USA_pacific_pacification_desc:1 "Australia and New Zealand are too far from Britain to be effectively defended by them. We can not allow these nations, so full of people like unto our own, to be taken over by a nation hostile to [USA.GetNameDef]."
  USA_war_plan_scarlet_garnet_desc:1 "In the Austral, Australia and New Zealand may well come to the aid of their motherland. Any plan to deal with Britain must account for her colonies."
- USA_war_plan_orange_desc:0 "There is no greater threat to us than Japan's imperialistic ambitions. Their efforts to expand into Asia, the Austral and the Pacific will put them at odds with our interests quickly."
+ USA_war_plan_orange_desc:0 "There is no greater threat to us than Japan's and Trinsuyin's imperialistic ambitions. Their efforts to expand into Asia, the Austral and the Pacific will put them at odds with our interests quickly."
+ USA_war_plan_black:0 "War Plan Black"
+ USA_war_plan_black_desc:0 "It's plain to see that Germany and The Frestaaters of Mu politics and expansionism goes far beyond any measure of sanity. They must be stopped before their war machine reaches the point of no return."
  southern_expansion_focus_desc:0 "The Southern Expansion Doctrine, favored by the Imperial Navy, dictates that Japan must expand south into Southeast Asia, the Northwestern Austral and the Pacific. The rich colonies of the European powers have resources critical to Japanese industry, but this path will lead to conflict with the United States. A preemptive strike is in order."
