Named Hyperborean Cities

--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -249,12 +249,12 @@
  VICTORY_POINTS_14903: "Sanggofesaran"
  VICTORY_POINTS_13583: "Pennston"
  VICTORY_POINTS_12736: "Los Demonios"
- VICTORY_POINTS_8461: "HB arctic sea port"
- VICTORY_POINTS_7738: "HB marsh farms"
- VICTORY_POINTS_1684: "HB river port"
- VICTORY_POINTS_4710: "Frozen Farms"
- VICTORY_POINTS_1744: "Mining to sell and not die"
- VICTORY_POINTS_10620: "Capital of the BoreanSSR"
+ VICTORY_POINTS_3169: "Shehlenor"
+ VICTORY_POINTS_7738: "Belorevostok"
+ VICTORY_POINTS_4669: "Amyfethas"
+ VICTORY_POINTS_4710: "Wavesera"
+ VICTORY_POINTS_1744: "Pripolyarnyy"
+ VICTORY_POINTS_10620: "Nythmaserin"
  VICTORY_POINTS_9786: "Wilmington"
  VICTORY_POINTS_10859: "Wakanda"
  VICTORY_POINTS_12929: "Fragneilo"
