--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -44,5 +44,8 @@
  LOADING_TIP_129:0 "\"Morally subversive, economically destructive, socially degrading, confused in its causes, devious in its results, it is the outstanding example in European history of meaningless conflict" \"\n -Dame Cicely Veronica Wedgwood"
  LOADING_TIP_130:0 "\"What happens when Light shines so painfully bright, that it becomes more terrible than Darkness?"\"\n - Upon learning about the nuclear detonations on japan"
  LOADING_TIP_131:0 "\"We came for the soft belly of Europe, and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Atlantis in Italy"
- LOADING_TIP_132:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -  King Roderigo of Yohannia"
+ LOADING_TIP_132:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -  King Roderiq
+ LOADING_TIP_133:0 "\"America, for all their talk of freedom, continue to ignore the plight of the Africans. If they will not help then we shall!"\"\n - King Roderiq
+ LOADING_TIP_134:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them."\"\n -King Roderiq
+ LOADING_TIP_135:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself."\"\n -Atlantean Report on Project Tangerine
  
