--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -35,17 +35,17 @@
  LOADING_TIP_120:0 "\"Freedom without laws means anarchy; laws without freedom means tyranny.\"\n - Kampfgruppeführer T. Degurechaff, F.S.M. Freikorps"
  LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
  LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
- LOADING_TIP_123:0 "\"When death stares at me I shouldn't close my eyes and pray for it; I should smirk at the very concept of it. I owe those countless soldiers an answer cause of my gambles. They have faced my many gambles and when wrong I am responsible for their countless deaths.\"\n - General George Livingston III of British Lemuria " #Thursa can you trim this to fit in the box?
+ LOADING_TIP_123:0 "\"I do not fear death; I live with it. My men answer for the gambles I make with their very lives. How can I play with stakes that high and shrink from the cost? I cannot.\"\n - General George Livingston III of British Lemuria " 
  LOADING_TIP_124:0 "\"I no longer  believe there is a god - for if he does exist He must be truly mad! Look at the state of things!\"\n -unnamed Yohannian High Commissioner"
- LOADING_TIP_125:0 "\"Its only a war crime if you lose"\"\n -General *name* Teravamsincha of Brazil in the Congo"
- LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -Trynusyin puppet emperor"
- LOADING_TIP_127:0 "\"The law is not a religious doctrine! The laws were made to help us govern ourselves... but it's been left to rule on its own. Somewhere along the line, it's been twisted into scripture!\"\n -unnamed Yohannian government official"
- LOADING_TIP_128:0 "\"The distinction between a Merchant and a General is seen only by politicians who have no experience of either.\"\n -Atlatnis"
- LOADING_TIP_129:0 "\"Morally subversive, economically destructive, socially degrading, confused in its causes, devious in its results, it is the outstanding example in European history of meaningless conflict" \"\n -Dame Cicely Veronica Wedgwood"
- LOADING_TIP_130:0 "\"What happens when Light shines so painfully bright, that it becomes more terrible than Darkness?"\"\n - Upon learning about the nuclear detonations on japan"
- LOADING_TIP_131:0 "\"We came for the soft belly of Europe, and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Atlantis in Italy"
+ LOADING_TIP_125:0 "\"Its only a war crime if you lose!"\"\n -General Parunampindre of the Teravamsincha of Brazil"
+ LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -Trinusyin puppet emperor"
+ LOADING_TIP_127:0 "\"No where, in the laws of God or men, does it require that I stand by and do nothing as people die. Whether it is by the hand of a conqueror or a colonial overlord, Africans die every day. Enough, I say, enough!\"\n -King Roderiq I of Yohannia"
+ LOADING_TIP_128:0 "\"The distinction between a merchant and a general is seen only by politicians who have no concept of either.\"\n -Atlantean Saying"
+ LOADING_TIP_129:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -King Roderiq I of Yohannia"
+ LOADING_TIP_130:0 "\"What happens when the Light shines so painfully bright that it becomes more terrible than the Darkness?"\"\n - Avaskanta Carras, upon learning about the nuclear detonations on japan"
+ LOADING_TIP_131:0 "\"We came for the soft belly of Europe and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Atlantis in Italy"
  LOADING_TIP_132:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -  King Roderiq
  LOADING_TIP_133:0 "\"America, for all their talk of freedom, continue to ignore the plight of the Africans. If they will not help then we shall!"\"\n - King Roderiq
- LOADING_TIP_134:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them."\"\n -King Roderiq
+ LOADING_TIP_134:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them."\"\n -King Roderiq I of Yohannia
  LOADING_TIP_135:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself."\"\n -Atlantean Report on Project Tangerine
  
