Atlantis Divided and Nerfed

--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -275,3 +275,6 @@
  STATE_1076:0 "Delaware"
  STATE_1077:0 "Eureka"
  STATE_1078:0 "North Queensland" 
+ STATE_1079:0 "Inaxe" 
+ STATE_1080:0 "Navmaur" 
+ STATE_1081:0 "Laytadale" 
