--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -47,5 +47,5 @@
  LOADING_TIP_132:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -  King Roderiq
  LOADING_TIP_133:0 "\"America, for all their talk of freedom, continue to ignore the plight of the Africans. If they will not help then we shall!"\"\n - King Roderiq
  LOADING_TIP_134:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them."\"\n -King Roderiq I of Yohannia
- LOADING_TIP_135:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself."\"\n -Atlantean Report on Project Tangerine
+ LOADING_TIP_135:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself."\" -Atlantean Report on Project Tangerine
  
