--- a/localisation/AML_state_names_l_english.yml
+++ b/localisation/AML_state_names_l_english.yml
@@ -255,7 +255,7 @@
  STATE_1056:0 "Gatisrahaval"
  STATE_1057:0 "Ratulismara"
  STATE_1058:0 "Kilakkatai"
- STATE_1059:0 "Tsetsa"
+ STATE_1059:0 "Tsetsai"
  STATE_1060:0 "Boranepatera"
  STATE_1061:0 "Portuguese Utura"
  STATE_1062:0 "Chaansau"
@@ -278,3 +278,4 @@
  STATE_1079:0 "Inaxe" 
  STATE_1080:0 "Navmaur" 
  STATE_1081:0 "Laytadale" 
+ STATE_1082:0 "Muru'ona"
