--- a/localisation/replace/AML_victory_points_l_english.yml
+++ b/localisation/replace/AML_victory_points_l_english.yml
@@ -264,3 +264,4 @@
  VICTORY_POINTS_8186: "Port Augusta"
  VICTORY_POINTS_10927: "Andamooka"
  VICTORY_POINTS_1077: "Broken Hill"
+ VICTORY_POINTS_13131: "Muru'ona"
