--- a/localisation/AML_loading_tips_l_english.yml
+++ b/localisation/AML_loading_tips_l_english.yml
@@ -1,9 +1,9 @@
 ﻿l_english:
- LOADING_TIP_87:0 "\"I never said I wanted peace... just the end of this war.\"\n - Lu Chao Min"
+ LOADING_TIP_87:0 "\"I never said I wanted peace... just the end of this war.\"\n - Lu Chagao Mingxe"
  LOADING_TIP_88:0 "\"You drive tanks down the streets, and then expect us to believe you when you call for peace?\"\n - Fijnland's Prime Minister, Willem van den Bergh"
  LOADING_TIP_89:0 "\"Vorwärts! Vorwärts und steche ihnen in die Augen!\"\n - Heinrich Schmidt, F.S.M. Freikorps."
  LOADING_TIP_90:0 "\"You can live your life as a coward, or you die as a hero!\"\n - General Dajjar Zohoq addressing his troops a moment before an enemy bullet killed him."
- LOADING_TIP_91:0 "\"One dishonor heaped upon another. The heavenly mandate has departed and left us desolate.\"\n - Yang Xinyi Luo addressing the Trinsuyin Parliament before committing suicide." #This no longer make sense given the new lore.
+ LOADING_TIP_91:0 "\"As one places stones on a Go board, so have I maneuvered Trinsuyin. They shall serve us; their new masters.\"\n - Japanese Emperor Shōwa" 
  LOADING_TIP_92:0 "\"Praise the Lord and pass the ammunition!\"\n - Chaplain Forgy, USS New Orleans"
  LOADING_TIP_93:0 "\"If fighting is sure to result in victory, then you must fight!\"\n - Sun Tzu"
  LOADING_TIP_94:0 "\"No three things are as sure as French spirit, Atlantean cunning, and American unpredicatablity.\"\n - General Miles Dempsey"
@@ -19,7 +19,7 @@
  LOADING_TIP_104:0 "\"Fitzroy? That baboon's ass is dumber than my horse.\"\n - General Miles Dempsey"
  LOADING_TIP_105:0 "\"Four corners. Four Winds. Slide home the rifle bolt.\"\n - Coded Atlantean Transmission"
  LOADING_TIP_106:0 "\"By bullet, by sword, or by blood - as God wills it!\"\n - British Lemurian Garrison Motto"
- LOADING_TIP_107:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n - Yang Xinyi Luo"
+ LOADING_TIP_107:0 "\"The majority of men are worse than sheep - at least sheep don't criticize their leader.\"\n - Yangle Waglin Lumo"
  LOADING_TIP_108:0 "\"My men will follow me into hell and back. I decide when and where they fight - not some worthless bureaucrat in London!\"\n - General Miles Dempsey"
  LOADING_TIP_109:0 "\"Our gods have cursed us, and your white god has blessed you. This is not our home any longer; it is our prison.\"\n - King Wanulu of Qlach upon surrendering to the British"
  LOADING_TIP_110:0 "Everything the sea touches is ours\n - Atlantean Marine Motto"
@@ -36,16 +36,16 @@
  LOADING_TIP_121:0 "\"If the public understood the true dangers of the so called 'Communist Revolution' they would spontaneously rise up and march on Moscow with any weapon they could find.\"\n - Robert Haining, Queen's Minister of Artura " 
  LOADING_TIP_122:0 "\"When I said 'defend our island whatever the cost may be.' I meant it. If Lemuria is that cost then so be it.\"\n - Winston Churchill, discussing the chaos in Lemuria" 
  LOADING_TIP_123:0 "\"I do not fear death; I live with it. My men answer for the gambles I make with their very lives. How can I play with stakes that high and shrink from the cost? I cannot.\"\n - General George Livingston III of British Lemuria " 
- LOADING_TIP_124:0 "\"I no longer  believe there is a god - for if he does exist He must be truly mad! Look at the state of things!\"\n -unnamed Yohannian High Commissioner"
+ LOADING_TIP_124:0 "\"I no longer believe there is a god - for if he does exist He must be truly mad! Look at the state of things!\"\n -Nawuq Fizroi, Yohannian High Commissioner"
  LOADING_TIP_125:0 "\"Its only a war crime if you lose!"\"\n -General Parunampindre of the Teravamsincha of Brazil"
- LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n -Trinusyin puppet emperor"
+ LOADING_TIP_126:0 "\"Where is the line between losing everything, and giving it all to say that you've tried?\"\n - Yang Xinyi Luo, last Chancellor of the Trinsuyinese Democratic Republic, 1936"
  LOADING_TIP_127:0 "\"No where, in the laws of God or men, does it require that I stand by and do nothing as people die. Whether it is by the hand of a conqueror or a colonial overlord, Africans die every day. Enough, I say, enough!\"\n -King Roderiq I of Yohannia"
  LOADING_TIP_128:0 "\"The distinction between a merchant and a general is seen only by politicians who have no concept of either.\"\n -Atlantean Saying"
  LOADING_TIP_129:0 "\"I am not the hero the Africans wanted. I am the monster the British created."\"\n -King Roderiq I of Yohannia"
- LOADING_TIP_130:0 "\"What happens when the Light shines so painfully bright that it becomes more terrible than the Darkness?"\"\n - Avaskanta Carras, upon learning about the nuclear detonations on japan"
- LOADING_TIP_131:0 "\"We came for the soft belly of Europe and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Atlantis in Italy"
- LOADING_TIP_132:0 "\"A man who compliments another to his face is either a homosexual, or a tactician."\"\n King Roderiq I to Captured Atlanean General *name*
- LOADING_TIP_133:0 "\"America, for all their talk of freedom, continue to ignore the plight of the Africans. If they will not help then we shall!"\"\n - King Roderiq
+ LOADING_TIP_130:0 "\"What happens when the Light shines so painfully bright that it becomes more terrible than the Darkness?"\"\n - Avaskanta Carras, upon learning about the nuclear detonations over Japan"
+ LOADING_TIP_131:0 "\"We came for the soft belly of Europe and found a tough old gut: a nightmare of mountains and concrete and machine guns."\"\n - Lemurian General Arnold DeChamps in Italy"
+ LOADING_TIP_132:0 "\"A man who compliments another to his face is either a homosexual, or a tactician."\"\n King Roderiq I to Captured Atlanean General Rexet Nalingrat
+ LOADING_TIP_133:0 "\"America, for all their talk of freedom, continues to ignore the plight of the Africans. If they will not help then we shall!"\"\n - King Roderiq I of Yohannia
  LOADING_TIP_134:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them."\"\n -King Roderiq I of Yohannia
  LOADING_TIP_135:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself."\" -Atlantean Report on Project Tangerine
  
