--- a/localisation/AML_tech_l_english.yml
+++ b/localisation/AML_tech_l_english.yml
@@ -577,7 +577,7 @@
  carrier_VLFP:0 "The Very Large Annoyance"
  carrier_VLFP_desc:0 "TBA"
  ship_hull_carrier_vlfp:0 "VLFP TECH"
- ship_hull_carrier_vlfp_desc:0 "not sure if this will show up"
+ ship_hull_carrier_vlfp_desc:0 "TBA"
  
  
  vlfp_ship_secondaries:0 "VLFP Secondaries"
