--- a/localisation/AML_tech_l_english.yml
+++ b/localisation/AML_tech_l_english.yml
@@ -568,28 +568,28 @@
  ATL_rocket_interceptor_equipment_2_desc:0 "The last prototype made by the Army Aviation Research Group. Armed with 19 anti-air unguided rockets, it was supposed to climb in a 30º ascent trajectory, fire all its rockets from a range of 1km into enemy bomber formations and glide back. After the third death due to engine explosions, the project was abandoned."
  ATL_rocket_interceptor_equipment_3:0 "Wotarnial 363 Iáxat"
  ATL_rocket_interceptor_equipment_3_short:0 "Wot/363 Iáxat"
- ATL_rocket_interceptor_equipment_3_desc:0 "The only rocket interceptor to see service in the Atlantean home islands, it was based on the Ré/3 concept, also carrying rockets in its nose. Due to its limited and highly specialized role, it never saw any action, and the few that were produced were later used as drones for target practicing in the cold war."
+ ATL_rocket_interceptor_equipment_3_desc:0 "The only rocket interceptor to see service in the Atlantean home islands, it was based on the Ré/3 concept, also carrying rockets in its nose. Due to its limited and highly specialized role, it never saw any action, and the few that were produced were later used as drones for target practicing in the Cold War."
  
  #VLFP Stuff
  ATL_build_VLFP_dockyard:0 "VLFP Dockyard"
- ATL_build_VLFP_dockyard_desc:0 "TBA"
+ ATL_build_VLFP_dockyard_desc:0 "The construction of the massive VLFPs requires an equally large dockyard. These floating airbases, wonders of steel, asphalt and aluminum, required special pylons be driven deep into the ocean floor to help with supporting the various pieces the VLFPs during construction."
  
- carrier_VLFP:0 "The Very Large Annoyance"
- carrier_VLFP_desc:0 "TBA"
+ carrier_VLFP:0 "The Very Large Floating Platform"
+ carrier_VLFP_desc:0 "Many nations have toyed with the idea of creating large carriers to bring air power into battle, but the Atlanteans surpasses them all by an order of magnitude. The VLFP, while quite slow and vulnerable to enemy submarine attacks, when backed with a support armada could bring almost an entire nation's worth of aircraft, including bombers, to the fight. This enormous tactical advantage was difficult to achieve technically but the psychological blow was considered well worth it by the Atlantean Armed Forces."
  ship_hull_carrier_vlfp:0 "VLFP TECH"
- ship_hull_carrier_vlfp_desc:0 "TBA"
+ ship_hull_carrier_vlfp_desc:0 "Based initially on the floating farm platform that had by this point become common in the Atlantean Kolpo, the militarization of these floating islands required the addition of powerful engines and vast improvements to the substructure to support the wear and tear of active use."
  
  
  vlfp_ship_secondaries:0 "VLFP Secondaries"
  vlfp_ship_secondaries_desc:0 "TBA"
- vlfp_ship_deck_space:0 "Very Large Deck..."
- vlfp_ship_deck_space_desc:0 "Compensating for something?"
- vlfp_ship_extra_fuel_tank:0 "Food water Fuel Clothes etc"
- vlfp_ship_extra_fuel_tank_desc:0 "TBA"
+ vlfp_ship_deck_space:0 "Increased Deck Space"
+ vlfp_ship_deck_space_desc:0 "The enormous frame of the VLFP could be modified to fit many different layouts, but one of its primary functions is to carry aircraft into battle."
+ vlfp_ship_extra_fuel_tank:0 "Increased materiel storage."
+ vlfp_ship_extra_fuel_tank_desc:0 "Including extra fuel, but also encompassing rations and supplies for sailors and airmen, extra aircraft parts, etc."
  vlfp_ship_anti_air:0 "VLFP Anti Air"
- vlfp_ship_anti_air_desc:0 "TBA"
+ vlfp_ship_anti_air_desc:0 "Such a large ship also presents a large target. Thankfully the VLFP could support a number of extremely powerful anti-aircraft guns to protect its precious cargo and airstrips."
  vlfp_carrier_ship_engine:0 " 32 some odd boilers make this thing Go"
- vlfp_carrier_ship_engine_desc:0 "TBA"
+ vlfp_carrier_ship_engine_desc:0 "Moving a VLFP is no easy feat. The huge boiler rooms and massive engines provided the necessary power to move these small islands."
  
  EQ_MOD_CAT_vlfp_ship_deck_space_TITLE:0 "Deck Space"
  EQ_MOD_CAT_vlfp_ship_secondaries_TITLE:0 "Secondaries"
@@ -889,7 +889,6 @@
  MUU_jet_tac_bomber_equipment_2:0 "Wright-Asorsak 1460 Karuze"
  MUU_jet_tac_bomber_equipment_2_short:0 "Wri-Aso/1460 Karuze"
  MUU_jet_tac_bomber_equipment_2_desc:0 "The Karuze was a very fast fighter-bomber based on, and meant to operate in conjunction with, the Sat-Mig/025 Gegit fighter. Went to mass production in the early 50s, and saw action in the Korean War."
- 
  MUU_strat_bomber_equipment_1:0 "Yenámirtal-Wright-Asorsak 061 Anta"
  MUU_strat_bomber_equipment_1_short:0 "Ye-Wr-As/061 Anta"
  MUU_strat_bomber_equipment_1_desc:0 "The Anta was a joint project between the already established Wright-Asorsak Aeronautics and the truck company Yenámirtal, which made the engines and hydraulics. It opened room for Yenámirtal's entry into the heavy aircraft market. Poorly armed, it hauled a larger payload than its contemporaries. Saw usage up until 1944."
