Localized FMU focus tree

--- a/localisation/replace/AML_loading_tips_l_english.yml
+++ b/localisation/replace/AML_loading_tips_l_english.yml
@@ -48,5 +48,4 @@
  LOADING_TIP_47:0 "\"America, for all their talk of freedom, continues to ignore the plight of the Africans. If they will not help then we shall!"\"\n - King Roderiq I of Yohannia
  LOADING_TIP_48:0 "\"America has shown its true colors. They have never cared about freedom - it's the pursuit of money that drives them! The suffering of the African does not register for them."\"\n -King Roderiq I of Yohannia
  LOADING_TIP_49:0 "\"Difficulty infiltrating Yohannian command stems from the following: fanatical devotion to their king, difficult language to master, tight-knit populace, extreme climate. Last contact reported that the king has no problem killing those he suspects of being double agents... himself."\" -Atlantean Report on Project Tangerine
- LOADING_TIP_50:0 "\"Dear God... What have they done!?!"\" -King Roderiq on receiving photographic evidence of the Holocaust
- 
+ LOADING_TIP_50:0 "\"Dear God... What have they done!?!"\"\n -King Roderiq on receiving photographic evidence of the Holocaust 
